--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   # - git remote set-url origin https://${GITHUB_TOKEN}@github.com/pie-framework/pie-ui.git
 
 before_script:
-  - echo 'STATUS'
+  - echo "STATUS"
   - git status
   - git checkout ${TRAVIS_BRANCH}
 
