--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "Travis CI"
-  # - git remote set-url origin https://${GITHUB_TOKEN}@github.com/pie-framework/pie-ui.git
 
 before_script:
+  - git remote set-url origin https://${GITHUB_TOKEN}@github.com/pie-framework/pie-ui.git
   - echo "STATUS"
   - git status
   - git checkout ${TRAVIS_BRANCH}
