--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
   "packages": ["packages/*"],
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "message": "[skip travis] chore: publish"
+    }
+  }
 }
