rename develop to next for deployment

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "lerna exec -- rm -fr lib",
     "build": "npm run clean && npm run lint && lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/babel --ignore '/__test__/','/__tests__/' src -d lib --copy-files --source-maps",
     "build:demo": "scripts/build-demo",
-    "deploy:demo:dev": "scripts/deploy-demo --alias pie-ui-develop",
+    "deploy:demo:next": "scripts/deploy-demo --alias pie-ui-next",
     "deploy:demo": "scripts/deploy-demo --alias pie-ui"
   },
   "devDependencies": {
