--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "release": "npm run clean && npm test && npm run build && lerna publish --conventional-commits --yes",
-    "release:next": "npm run clean && npm test && npm run build && lerna publish --canary --yes --conventional-commits --preid next --dist-tag next",
+    "release": "scripts/release",
+    "release:next": "scripts/release next",
     "lint": "lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/eslint  --ignore-path \\$LERNA_ROOT_PATH/.eslintignore --ext .js --ext .jsx src",
     "clean": "lerna exec -- rm -fr lib",
     "build": "npm run clean && npm run lint && lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/babel --ignore '/__test__/','/__tests__/' src -d lib --copy-files --source-maps",
