--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ stages:
 jobs:
   include:
     - stage: travis-release-deploy-next
-      script: 'scripts/build release build-demo deploy-deploy --next --dryRun'
+      script: 'scripts/build release build-demo deploy-demo --next --dryRun'
     - stage: travis-release-deploy
       script: 'scripts/build release build-demo deploy-demo --dryRun'
 
