--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.12.4",
     "fs-extra": "^7.0.1",
+    "invariant": "^2.2.4",
     "jest": "^22.4.3",
     "lerna": "^3.11.0",
     "minimist": "^1.2.0",
