--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "the pie-elements mono repo",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": ">=11.2.0"
+  },
   "scripts": {
     "test": "scripts/build test",
     "release": "scripts/build release",
@@ -16,17 +19,32 @@
     "deploy:demo": "scripts/build deployDemo"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@pie-framework/build-helper": "^1.3.3",
     "@pie-lib/test-utils": "0.0.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "@types/jest": "^24.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^24.1.0",
     "debug": "^3.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -35,8 +53,8 @@
     "eslint-plugin-react": "^7.12.4",
     "fs-extra": "^7.0.1",
     "invariant": "^2.2.4",
-    "jest": "^22.4.3",
-    "lerna": "^3.11.0",
+    "jest": "^24.1.0",
+    "lerna": "^3.13.0",
     "minimist": "^1.2.0",
     "now": "^13.1.3",
     "opn": "^5.4.0",
