--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^24.1.0",
+    "conventional-changelog-cli": "^2.0.12",
     "debug": "^3.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
