--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-eslint": "^9.0.0",
     "babel-jest": "^24.1.0",
     "conventional-changelog-cli": "^2.0.12",
+    "conventional-changelog": "^2.0.12",
     "debug": "^3.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
