fix: process.exit(1) build on error

--- a/scripts/build
+++ b/scripts/build
@@ -34,7 +34,9 @@ cmds
   .execute()
   .then(() => {
     console.log('all done');
+    process.exit(0);
   })
   .catch(e => {
     console.error(e);
+    process.exit(1);
   });
