--- a/packages/math-inline/package.json
+++ b/packages/math-inline/package.json
@@ -23,5 +23,8 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b",
+  "scripts": {
+    "prepack": "../../scripts/build changelog --scope math-inline"
+  }
 }
