--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -39,5 +39,8 @@
     "@types/fs-extra": "^5.0.5",
     "@types/webpack": "^4.4.24",
     "webpack-hot-middleware": "^2.24.3"
+  },
+  "scripts": {
+    "prepack": "../../scripts/build changelog --scope demo"
   }
 }
