--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -21,5 +21,8 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
-  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b",
+  "scripts": {
+    "prepack": "../../scripts/build changelog --scope extended-text-entry"
+  }
 }
