--- a/packages/fill-in-the-blank/package.json
+++ b/packages/fill-in-the-blank/package.json
@@ -17,7 +17,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepack": "../../scripts/build changelog --scope fill-in-the-blank"
   },
   "author": "",
   "license": "ISC",
