--- a/packages/ruler/package.json
+++ b/packages/ruler/package.json
@@ -17,5 +17,8 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
-  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b",
+  "scripts": {
+    "prepack": "../../scripts/build changelog --scope ruler"
+  }
 }
