--- a/packages/text-entry/package.json
+++ b/packages/text-entry/package.json
@@ -13,7 +13,7 @@
   },
   "license": "ISC",
   "scripts": {
-    "test": "./node_modules/.bin/jest"
+    "prepack": "../../scripts/build changelog --scope text-entry"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
