--- a/.circle-ci/config.yml
+++ b/.circle-ci/config.yml
@@ -1,23 +1,63 @@
 # Javascript Node CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
+
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
-
-defaults: &defaults
-  working_directory: ~/repo
-  docker:
-    - image: circleci/node:11.10.0
-
 jobs:
   build:
-    <<: *defaults
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:7.10
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/repo
+
     steps:
       - checkout
 
-      - one:
-        name: one
-        command: echo one
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      # run tests!
+      # - run: yarn test
+      - run: echo one
+      - run: echo two
+#
+# version: 2
+
+# defaults: &defaults
+#   working_directory: ~/repo
+#   docker:
+#     - image: circleci/node:11.10.0
+
+# jobs:
+#   build:
+#     <<: *defaults
+#     steps:
+#       - checkout
+
+#       - one:
+#         name: one
+#         command: echo one
 #       # Download and cache dependencies
 #       - restore_cache:
 #           keys:
