--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@
 version: 2
 jobs:
   build:
+    branches:
+      only:
+        - develop
+
     docker:
       # specify the version you desire here
       - image: circleci/node:11.10.0
@@ -40,9 +44,7 @@ jobs:
 
       # run tests!
       # - run: yarn test
-      - run: echo one
-      - run: echo two
-      - run: echo three
+      - run: scripts/build release --next --skipForcePublish
 #
 # version: 2
 
@@ -109,4 +111,4 @@ jobs:
 #               only:
 #                 - develop
 #     jobs:
-#       - releaseNext
+#       - deployDemo
