--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,22 +8,15 @@
 #
 # v2
 version: 2
+
+defaults: &defaults
+  working_directory: ~/repo
+  docker:
+    - image: circleci/node:11.10.0
+
 jobs:
   build:
-    branches:
-      only:
-        - develop
-
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:11.10.0
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
+    <<: *defaults
 
     steps:
       - checkout
@@ -49,6 +42,34 @@ jobs:
       # run tests!
       # - run: yarn test
       - run: scripts/build release --next --skipForcePublish
+
+  deployDemo:
+    <<: *defaults
+
+    steps:
+      - checkout
+
+      - run:
+          name: Authenticate with registry
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      # run tests!
+      # - run: yarn test
+      - run: scripts/build build buildDemo deployDemo --next
 #
 # version: 2
 
@@ -104,15 +125,23 @@ jobs:
 #           name: Release Next
 #           command: npm run release:next
 
-# workflows:
-#   version: 2
-#   nightly:
-#     triggers:
-#       - schedule:
-#           cron: '0 0 * * *'
-#           filters:
-#             branches:
-#               only:
-#                 - develop
-#     jobs:
-#       - deployDemo
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only:
+                - develop
+
+  nightly:
+    triggers:
+      - schedule:
+          cron: '0 0 * * *'
+          filters:
+            branches:
+              only:
+                - develop
+    jobs:
+      - deployDemo
