--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,61 +5,42 @@ defaults: &defaults
   docker:
     - image: circleci/node:11.10.0
 
+reg_auth: &reg_auth
+  name: Authenticate with registry
+  command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
+
+restore_cache: &restore_cache
+  keys:
+    - v1-dependencies-{{ checksum "package.json" }}
+    # fallback to using the latest cache if no exact match is found
+    - v1-dependencies-
+
+save_cache: &save_cache
+  paths:
+    - node_modules
+  key: v1-dependencies-{{ checksum "package.json" }}
+
 jobs:
   build:
     <<: *defaults
 
     steps:
       - checkout
-
-      - run:
-          name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
+      - run: *reg_auth
+      - restore_cache: *restore_cache
       - run: yarn install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
-      # - run: yarn test
+      - save_cache: *save_cache
       - run: scripts/build release --next --skipForcePublish
 
-  deployDemo:
+  deploy_demo:
     <<: *defaults
 
     steps:
       - checkout
-
-      - run:
-          name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
+      - run: *reg_auth
+      - restore_cache: *restore_cache
       - run: yarn install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
-      # - run: yarn test
+      - save_cache: *save_cache
       - run: scripts/build build buildDemo deployDemo --next
 
 workflows:
@@ -81,4 +62,4 @@ workflows:
               only:
                 - develop
     jobs:
-      - deployDemo
+      - deploy_demo
