[ci skip] add simple build for non-main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,26 @@ save_cache: &save_cache
   key: v1-dependencies-{{ checksum "package.json" }}
 
 jobs:
+   lint:
+    <<: *defaults
+    steps:
+      - checkout
+      - run: *reg_auth
+      - restore_cache: *restore_cache
+      - run: yarn install
+      - save_cache: *save_cache
+      - run: scripts/build lint
+
+  test:
+    <<: *defaults
+    steps:
+      - checkout
+      - run: *reg_auth
+      - restore_cache: *restore_cache
+      - run: yarn install
+      - save_cache: *save_cache
+      - run: scripts/build babel test
+
   build:
     <<: *defaults
 
@@ -45,6 +65,21 @@ jobs:
 
 workflows:
   version: 2
+
+  simple_build:
+    jobs:
+      - lint:
+          filters:
+            branches:
+              ignore:
+                - develop
+                - master
+      - test:
+          filters:
+            branches:
+              ignore:
+                - develop
+                - master
   build:
     jobs:
       - build:
