--- a/packages/math-inline/package.json
+++ b/packages/math-inline/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^3.9.2",
     "@pie-lib/correct-answer-toggle": "^2.1.2",
     "@pie-lib/math-input": "^5.0.4",
+    "@pie-lib/math-toolbar": "^0.9.13",
     "@pie-lib/render-ui": "^4.3.1",
     "classnames": "^2.2.5",
     "debug": "^3.1.0",
