feat: integrate multiple-choice pie-ui elements as dependencies

--- a/packages/ebsr/package.json
+++ b/packages/ebsr/package.json
@@ -1,17 +1,24 @@
 {
   "name": "@pie-ui/ebsr",
-  "version": "1.0.0",
   "description": "",
+  "keywords": [
+    "pie",
+    "pie-ui",
+    "custom-element",
+    "react"
+  ],
+  "version": "1.0.0",
   "main": "lib/index.js",
+  "repository": "pie-framework/pie-elements.git",
   "publishConfig": {
     "access": "public"
   },
+  "license": "ISC",
   "dependencies": {
+    "@pie-ui/multiple-choice": "^4.7.0",
     "classnames": "^2.2.5",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
