--- a/packages/select-text/package.json
+++ b/packages/select-text/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/correct-answer-toggle": "2.1.2",
+    "@pie-lib/correct-answer-toggle": "^2.1.2",
     "@pie-lib/math-rendering": "^1.2.1",
     "@pie-lib/render-ui": "^4.3.1",
     "@pie-lib/text-select": "^1.4.0",
