--- a/packages/math-inline/package.json
+++ b/packages/math-inline/package.json
@@ -8,6 +8,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@pie-framework/mathquill": "^0.10.2",
     "@pie-lib/correct-answer-toggle": "^2.1.2",
     "@pie-lib/math-input": "^5.0.4",
     "@pie-lib/math-toolbar": "^0.9.13",
