--- a/packages/drag-in-the-blank/package.json
+++ b/packages/drag-in-the-blank/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pie-ui/inline-dropdown",
+  "name": "@pie-ui/drag-in-the-blank",
   "version": "1.0.0",
   "description": "",
   "repository": "pie-framework/pie-ui",
