--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -8,6 +8,8 @@
     "@material/top-app-bar": "^0.44.0",
     "@pie-ui/calculator": "^3.3.13",
     "@pie-ui/categorize": "^0.9.10",
+    "@pie-ui/drag-in-the-blank": "^1.0.0",
+    "@pie-ui/explicit-constructed-response": "^1.0.0",
     "@pie-ui/extended-text-entry": "^2.4.14",
     "@pie-ui/fill-in-the-blank": "^1.3.8",
     "@pie-ui/function-entry": "^3.2.7",
