chore: rm prepack - only needed on root

--- a/packages/inline-choice/package.json
+++ b/packages/inline-choice/package.json
@@ -20,8 +20,5 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
-  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b",
-  "scripts": {
-    "prepack": "../../scripts/build changelog --scope inline-choice"
-  }
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
