--- a/packages/categorize/package.json
+++ b/packages/categorize/package.json
@@ -29,8 +29,5 @@
   "devDependencies": {
     "react": "^16.8.1"
   },
-  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b",
-  "scripts": {
-    "prepack": "../../scripts/build changelog --scope categorize"
-  }
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
