--- a/packages/number-line/package.json
+++ b/packages/number-line/package.json
@@ -24,8 +24,5 @@
     "react-jss": "^8.4.0",
     "react-transition-group": "^2.3.1"
   },
-  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b",
-  "scripts": {
-    "prepack": "../../scripts/build changelog --scope number-line"
-  }
+  "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
 }
