--- a/packages/hotspot/package.json
+++ b/packages/hotspot/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@pie-framework/pie-player-events": "^0.1.0",
-    "classnames": "^2.2.5",
+    "@pie-lib/math-rendering": "^1.2.9",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
