fix(new-items): updated the pie-lib/mask-markup version in the new elements

--- a/packages/drag-in-the-blank/package.json
+++ b/packages/drag-in-the-blank/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/mask-markup": "next",
+    "@pie-lib/mask-markup": "^1.0.0",
     "classnames": "^2.2.5",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
