--- a/packages/hotspot/package.json
+++ b/packages/hotspot/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^3.9.3",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/math-rendering": "^1.2.9",
+    "konva": "^3.2.5",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
