feat: Replaced `config` with `graph` BREAKING CHANGE: `model.config` will not be used anymore. Instead, use `model.graph`.

--- a/packages/number-line/demo/config.json
+++ b/packages/number-line/demo/config.json
@@ -32,7 +32,7 @@
           "scorePercentage": 35
         }
       ],
-      "config": {
+      "graph": {
         "width": 500,
         "height": 400,
         "domain": [-5, 5],
