--- a/packages/passage/package.json
+++ b/packages/passage/package.json
@@ -15,6 +15,10 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "prop-types": "^15.6.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "@pie-framework/pie-player-events": "^0.1.0"
   }
 }
