--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -15,10 +15,12 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/math-rendering": "^1.2.9",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "react-konva": "^16.8.7-2"
   }
 }
