--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@pie-framework/pie-player-events": "^0.1.0",
+    "@pie-lib/config-ui": "^10.1.6",
     "@pie-lib/math-rendering": "^1.2.9",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
