--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -20,6 +20,7 @@
     "@pie-lib/config-ui": "^10.1.6",
     "@pie-lib/math-rendering": "^1.2.9",
     "classnames": "^2.2.6",
+    "konva": "^3.2.6",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
