--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -15,6 +15,9 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.3",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/config-ui": "^10.1.6",
