--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -23,7 +23,9 @@
     "@pie-lib/config-ui": "^10.1.6",
     "@pie-lib/math-rendering": "^1.2.9",
     "classnames": "^2.2.6",
+    "i": "^0.3.6",
     "konva": "^3.2.6",
+    "npm": "^6.9.0",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
