--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -30,5 +30,8 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-konva": "^16.8.7-2"
+  },
+  "devDependencies": {
+    "@types/node": "^12.0.2"
   }
 }
