--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -29,7 +29,8 @@
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-konva": "^16.8.7-2"
+    "react-konva": "^16.8.7-2",
+    "timers-browserify": "^2.0.10"
   },
   "devDependencies": {
     "@types/node": "^12.0.2"
