Add material-design-icons [ch1189]

--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -19,6 +19,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.3",
+    "@mdi/font": "^3.6.95",
+    "@mdi/js": "^3.6.95",
+    "@mdi/react": "^1.1.1",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/config-ui": "^10.1.6",
     "@pie-lib/math-rendering": "^1.2.9",
