Remove unused dependencies [ch1189]

--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -15,9 +15,6 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.3",
     "@mdi/font": "^3.6.95",
     "@mdi/js": "^3.6.95",
@@ -26,16 +23,10 @@
     "@pie-lib/config-ui": "^10.1.6",
     "@pie-lib/math-rendering": "^1.2.9",
     "classnames": "^2.2.6",
-    "i": "^0.3.6",
     "konva": "^3.2.6",
-    "npm": "^6.9.0",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-konva": "^16.8.7-2",
-    "timers-browserify": "^2.0.10"
-  },
-  "devDependencies": {
-    "@types/node": "^12.0.2"
+    "react-konva": "^16.8.7-2"
   }
 }
