--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -16,14 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
-    "@mdi/font": "^3.6.95",
     "@mdi/js": "^3.6.95",
     "@mdi/react": "^1.1.1",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/config-ui": "^10.1.6",
     "@pie-lib/math-rendering": "^1.2.9",
     "classnames": "^2.2.6",
+    "enzyme-to-json": "^3.3.5",
     "konva": "^3.2.6",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
