--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -9,6 +9,7 @@
     "@pie-ui/calculator": "^3.3.15",
     "@pie-ui/categorize": "^0.9.12",
     "@pie-ui/drag-in-the-blank": "^1.0.1",
+    "@pie-ui/drawing-response": "^1.0.0",
     "@pie-ui/explicit-constructed-response": "^1.0.1",
     "@pie-ui/extended-text-entry": "^2.4.16",
     "@pie-ui/fill-in-the-blank": "^1.3.10",
