--- a/packages/explicit-constructed-response/package.json
+++ b/packages/explicit-constructed-response/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/mask-markup": "^1.1.0",
+    "@pie-lib/correct-answer-toggle": "^2.1.2",
+    "@pie-lib/mask-markup": "^1.2.2",
     "@pie-lib/math-rendering": "^1.2.1",
     "classnames": "^2.2.5",
     "lodash": "^4.17.10",
