--- a/packages/graphing/package.json
+++ b/packages/graphing/package.json
@@ -8,6 +8,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@pie-lib/graphing": "^0.3.0",
     "classnames": "^2.2.5",
     "debug": "^4.1.1",
     "react": "^16.8.1",
