--- a/packages/drag-in-the-blank/package.json
+++ b/packages/drag-in-the-blank/package.json
@@ -15,6 +15,7 @@
     "@pie-lib/correct-answer-toggle": "^2.1.2",
     "@pie-lib/mask-markup": "^1.3.1",
     "@pie-lib/math-rendering": "^1.2.1",
+    "@pie-lib/render-ui": "^4.3.12",
     "classnames": "^2.2.5",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
