--- a/packages/graphing/package.json
+++ b/packages/graphing/package.json
@@ -7,6 +7,7 @@
   "description": "This interaction asks a student to draw a line that meets specific criteria. The student will draw the line by clicking on two points on the graph.",
   "main": "lib/index.js",
   "dependencies": {
+    "@pie-framework/pie-player-events": "^0.1.0",
     "@material-ui/core": "^3.9.2",
     "@pie-lib/graphing": "^1.0.1",
     "@pie-lib/render-ui": "^4.3.12",
