--- a/packages/drawing-response/package.json
+++ b/packages/drawing-response/package.json
@@ -21,6 +21,7 @@
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/config-ui": "^10.7.5",
     "@pie-lib/math-rendering": "^1.2.9",
+    "@pie-lib/render-ui": "^4.3.12",
     "classnames": "^2.2.6",
     "enzyme-to-json": "^3.3.5",
     "konva": "^3.2.6",
