--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^3.0.2",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/editable-html": "^7.10.4",
+    "@pie-lib/math-rendering": "^1.2.1",
     "@pie-lib/render-ui": "^4.3.1",
     "debug": "^4.1.1",
     "lodash.throttle": "^4.1.1",
