--- a/packages/image-cloze-association/package.json
+++ b/packages/image-cloze-association/package.json
@@ -20,6 +20,7 @@
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/drag": "^1.1.21",
     "@pie-lib/math-rendering": "^1.2.9",
+    "@pie-lib/render-ui": "^4.3.12",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
