--- a/packages/graphing/package.json
+++ b/packages/graphing/package.json
@@ -8,6 +8,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/graphing": "^1.2.2",
     "@pie-lib/math-rendering": "^1.3.4",
     "@pie-lib/render-ui": "^4.3.12",
