--- a/packages/charting/package.json
+++ b/packages/charting/package.json
@@ -11,8 +11,10 @@
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/math-rendering": "^1.3.4",
     "@pie-lib/render-ui": "^4.3.12",
+    "@pie-lib/charting": "^4.2.0",
     "classnames": "^2.2.5",
     "debug": "^4.1.1",
+    "lodash": "^4.17.15",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
