--- a/packages/hotspot/package.json
+++ b/packages/hotspot/package.json
@@ -23,6 +23,6 @@
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-konva": "^16.8.6"
+    "react-konva": "^16.8.7-2"
   }
 }
