--- a/packages/ebsr/package.json
+++ b/packages/ebsr/package.json
@@ -18,6 +18,7 @@
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-ui/multiple-choice": "^4.11.5",
     "classnames": "^2.2.5",
-    "debug": "^4.1.1"
+    "debug": "^4.1.1",
+    "lodash": "^4.17.11"
   }
 }
