--- a/packages/match-list/package.json
+++ b/packages/match-list/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/correct-answer-toggle": "^2.2.6",
     "@pie-lib/drag": "^1.1.21",
     "@pie-lib/render-ui": "^4.4.5",
