fix: add pie-player-events dependency

--- a/packages/match/package.json
+++ b/packages/match/package.json
@@ -8,6 +8,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/correct-answer-toggle": "^2.2.6",
     "@pie-lib/render-ui": "^4.4.5",
     "classnames": "^2.2.5",
