--- a/packages/match/package.json
+++ b/packages/match/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/correct-answer-toggle": "^2.2.6",
+    "@pie-lib/math-rendering": "^1.3.7",
     "@pie-lib/render-ui": "^4.4.5",
     "classnames": "^2.2.5",
     "debug": "^4.1.1",
