--- a/packages/match-list/package.json
+++ b/packages/match-list/package.json
@@ -12,7 +12,8 @@
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/correct-answer-toggle": "^2.2.6",
     "@pie-lib/drag": "^1.1.21",
-    "@pie-lib/render-ui": "^4.4.5",
+    "@pie-lib/math-rendering": "^2.0.3",
+    "@pie-lib/render-ui": "^4.5.2",
     "classnames": "^2.2.5",
     "debug": "^4.1.1",
     "lodash": "^4.17.10",
