--- a/packages/match/package.json
+++ b/packages/match/package.json
@@ -10,7 +10,8 @@
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/correct-answer-toggle": "^2.2.6",
-    "@pie-lib/render-ui": "^4.4.5",
+    "@pie-lib/math-rendering": "^2.0.3",
+    "@pie-lib/render-ui": "^4.5.2",
     "classnames": "^2.2.5",
     "debug": "^4.1.1",
     "lodash": "^4.17.10",
