feat: add pie-shared-lib-builder
This is something we're trialling to set up builds in the repo w/ shared
libs using browser modules.

--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -9,6 +9,7 @@
   ],
   "version": "4.11.13",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "repository": "pie-framework/pie-elements.git",
   "publishConfig": {
     "access": "public"
