--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
       - restore_cache: *restore_cache
       - run: yarn install
       - save_cache: *save_cache
-      - run: scripts/build release --next --skipForcePublish
+      - run: scripts/build release --next --skipForcePublish --token $NPM_TOKEN
   release:
     <<: *defaults
     steps:
@@ -56,7 +56,7 @@ jobs:
       - restore_cache: *restore_cache
       - run: yarn install
       - save_cache: *save_cache
-      - run: scripts/build release
+      - run: scripts/build release --token $NPM_TOKEN
   deploy_demo:
     <<: *defaults
     steps:
@@ -102,7 +102,7 @@ workflows:
   nightly:
     triggers:
       - schedule:
-          cron: "0 0 * * *"
+          cron: '0 0 * * *'
           filters:
             branches:
               only:
