--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-react": "^7.0.0",
     "@pie-framework/build-helper": "^4.4.2",
     "@pie-lib/test-utils": "0.0.3",
+    "@pslb/pslb": "^1.0.3",
     "@types/jest": "^24.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
@@ -55,6 +56,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "ncu": "^0.2.1"
+    "ncu": "^0.2.1",
+    "mathjs": "^6.6.1"
   }
 }
