--- a/packages/inline-dropdown/package.json
+++ b/packages/inline-dropdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/inline-dropdown",
-  "version": "1.7.10-e2",
+  "version": "1.7.10",
   "description": "",
   "repository": "pie-framework/pie-ui",
   "main": "lib/index.js",
