chore: add module path

--- a/packages/charting/package.json
+++ b/packages/charting/package.json
@@ -6,6 +6,7 @@
   "version": "0.2.8",
   "description": "This interaction asks a student to draw a chart that meets specific criteria. The student will draw a category on the chart by clicking 'Add Category' and dragging the top part of the category.",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
