--- a/packages/select-text/package.json
+++ b/packages/select-text/package.json
@@ -6,6 +6,7 @@
   "version": "1.6.8",
   "description": "",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
