--- a/packages/categorize/package.json
+++ b/packages/categorize/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.17",
   "description": "",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "publishConfig": {
     "access": "public"
   },
