--- a/packages/fill-in-the-blank/package.json
+++ b/packages/fill-in-the-blank/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.8.1"
   },
   "main": "lib/index.js",
+  "module": "src/index.js",
   "author": "",
   "license": "ISC",
   "gitHead": "25b2169d13da6abaaaa962e42f3f6d6ab400ec8b"
