--- a/packages/graphing/package.json
+++ b/packages/graphing/package.json
@@ -6,6 +6,7 @@
   "version": "2.3.13",
   "description": "This interaction asks a student to draw a line that meets specific criteria. The student will draw the line by clicking on two points on the graph.",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
