--- a/packages/hotspot/package.json
+++ b/packages/hotspot/package.json
@@ -9,6 +9,7 @@
   ],
   "version": "1.3.5",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "repository": "pie-framework/pie-elements.git",
   "publishConfig": {
     "access": "public"
