--- a/packages/match/package.json
+++ b/packages/match/package.json
@@ -6,6 +6,7 @@
   "version": "2.3.15",
   "description": "In Choice Matrix, students associate choices in the first column with options in the adjacent rows. This interaction allows for either one or more correct answers.",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
