chore: fix sharedBuild

--- a/scripts/build
+++ b/scripts/build
@@ -34,7 +34,7 @@ class UiCommands extends Commands {
   }
 
   build() {
-    return super.build().then(this.sharedBuild);
+    return super.build().then(() => this.sharedBuild());
   }
 }
 
